Switched eye render targets to 16 bit float. Updated terrain to use separate camera and object constant buffers rather than a single uniform constant buffer and started to put scaffolding in place to share constant buffer definitions easily between hlsl code and C++ code.

--- a/OculusFramework/OculusFramework.vcxproj
+++ b/OculusFramework/OculusFramework.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="src\DirectXHelpers.h" />
     <ClInclude Include="src\farmhash.h" />
     <ClInclude Include="src\hashhelpers.h" />
+    <ClInclude Include="src\hlslmacros.h" />
     <ClInclude Include="src\libovrwrapper.h" />
     <ClInclude Include="src\pipelinestateobject.h" />
     <ClInclude Include="src\pipelinestateobjectmanager.h" />
@@ -190,6 +191,8 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="commoncbuffers.hlsli" />
+    <None Include="commonstructs.hlsli" />
     <None Include="lighting.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
