Fixed biggest bug in environment mapping that was causing way too bright specular env map reflections at high spec powers. Incorrectly applying renormalization from light specular to normal maps.

--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -157,6 +157,15 @@
     <FxCompile Include="tonemapvs.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="luminancerangeps.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="luminancerangevs.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="loglumps.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="lighting.hlsli">
