Initial IMGUI integration, just showing the IMGUI sample window for now.

--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="shaders">
       <UniqueIdentifier>{89c53461-00cd-4bdc-86d1-9bb302804c4f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="imgui">
+      <UniqueIdentifier>{f275f007-ac79-4e76-a691-f72b90b25d34}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\d3dhelper.h">
@@ -75,6 +78,24 @@
     <ClInclude Include="src\hlslmacros.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\imgui\imconfig.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imgui.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imgui_impl_dx11.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\stb_rect_pack.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\stb_textedit.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\stb_truetype.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\d3dhelper.cpp">
@@ -125,6 +146,12 @@
     <ClCompile Include="src\d3dstatemanagers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\imgui\imgui.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui_impl_dx11.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="dummyhmdps.hlsl">
@@ -164,6 +191,12 @@
       <Filter>shaders</Filter>
     </FxCompile>
     <FxCompile Include="loglumps.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="quadvs.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="imguips.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
   </ItemGroup>
