--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -199,6 +199,9 @@
     <FxCompile Include="imguips.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="loglumblendps.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="lighting.hlsli">
