Cleaned up some D3D code in scene.cpp to use std::size for array length rather than manual array length, hadn't realized it existed and was available in VS2015. Should make the same updates elsewhere but checking in WIP to work on some other things.

--- a/OculusFramework/OculusFramework.vcxproj
+++ b/OculusFramework/OculusFramework.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="src\scene.h" />
     <ClInclude Include="src\sphere.h" />
     <ClInclude Include="src\terrain.h" />
+    <ClInclude Include="src\util.h" />
     <ClInclude Include="src\Win32_DX11AppUtil.h" />
   </ItemGroup>
   <ItemGroup>
