Changed sampler handling so we have one global common set of samplers. Unlikely to need more than 16 any time soon and this fits better with D3D12 resource binding model for samplers.

--- a/OculusFramework/OculusFramework.vcxproj
+++ b/OculusFramework/OculusFramework.vcxproj
@@ -249,6 +249,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="commoncbuffers.hlsli" />
+    <None Include="commonsamplers.hlsli" />
     <None Include="commonstructs.hlsli" />
     <None Include="lighting.hlsli" />
   </ItemGroup>
