--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -216,5 +216,8 @@
     <None Include="commonstructs.hlsli">
       <Filter>shaders</Filter>
     </None>
+    <None Include="commonsamplers.hlsli">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
