Checking in WIP shapefile loading. Can now load positions and name for topographics features from shapefile.

--- a/shapelib-1.3.0/makefile.vc
+++ b/shapelib-1.3.0/makefile.vc
@@ -1,6 +1,6 @@
 
 #CFLAGS	=	/DSHPAPI_CALL=__stdcall
-CFLAGS =	/nologo /Ox /MT /DSHAPELIB_DLLEXPORT
+CFLAGS =	/nologo /Ox /MT /Zi /DSHAPELIB_DLLEXPORT
 
 IMPORT_LIB	= shapelib_i.lib
 STATIC_LIB	= shapelib.lib
