--- a/OculusFramework/OculusFramework.vcxproj
+++ b/OculusFramework/OculusFramework.vcxproj
@@ -68,7 +68,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)shapelib-1.3.0;$(SolutionDir)libgeotiff-1.4.0;$(SolutionDir)proj-4.9.1\src;$(SolutionDir)tiff-4.0.3\libtiff;$(OVR_SDK)\LibOVR\Lib\Windows\$(Platform)\$(Configuration)\VS2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>shapelib.lib;geotiff.lib;libtiff.lib;proj.lib;libovr.lib;ws2_32.lib;%(AdditionalDependencies);winmm.lib;d3d11.lib;dxgi.lib;dxguid.lib;d3dcompiler.lib;xinput.lib</AdditionalDependencies>
+      <AdditionalDependencies>shapelib.lib;geotiff.lib;libtiff.lib;proj.lib;libovr.lib;ws2_32.lib;%(AdditionalDependencies);winmm.lib;d3d11.lib;dxgi.lib;dxguid.lib;d3dcompiler.lib;xinput.lib;d2d1.lib;dwrite.lib</AdditionalDependencies>
       <AdditionalOptions>/DEBUG:FASTLINK /time+ %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
@@ -95,7 +95,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)shapelib-1.3.0;$(SolutionDir)libgeotiff-1.4.0;$(SolutionDir)proj-4.9.1\src;$(SolutionDir)tiff-4.0.3\libtiff;$(OVR_SDK)\LibOVR\Lib\Windows\$(Platform)\$(Configuration)\VS2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>shapelib.lib;geotiff.lib;libtiff.lib;proj.lib;libovr.lib;ws2_32.lib;%(AdditionalDependencies);winmm.lib;d3d11.lib;dxgi.lib;dxguid.lib;d3dcompiler.lib;xinput.lib</AdditionalDependencies>
+      <AdditionalDependencies>shapelib.lib;geotiff.lib;libtiff.lib;proj.lib;libovr.lib;ws2_32.lib;%(AdditionalDependencies);winmm.lib;d3d11.lib;dxgi.lib;dxguid.lib;d3dcompiler.lib;xinput.lib;d2d1.lib;dwrite.lib</AdditionalDependencies>
       <AdditionalOptions>/DEBUG:FASTLINK /time+ %(AdditionalOptions)</AdditionalOptions>
       <LinkTimeCodeGeneration>UseFastLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
@@ -117,6 +117,7 @@
     <ClInclude Include="src\imgui\stb_rect_pack.h" />
     <ClInclude Include="src\imgui\stb_textedit.h" />
     <ClInclude Include="src\imgui\stb_truetype.h" />
+    <ClInclude Include="src\label.h" />
     <ClInclude Include="src\libovrwrapper.h" />
     <ClInclude Include="src\pipelinestateobject.h" />
     <ClInclude Include="src\pipelinestateobjectmanager.h" />
@@ -141,6 +142,7 @@
     <ClCompile Include="src\hashhelpers.cpp" />
     <ClCompile Include="src\imgui\imgui.cpp" />
     <ClCompile Include="src\imgui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="src\label.cpp" />
     <ClCompile Include="src\libovrwrapper.cpp" />
     <ClCompile Include="src\pipelinestateobject.cpp" />
     <ClCompile Include="src\pipelinestateobjectmanager.cpp" />
