--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -214,6 +214,12 @@
     <FxCompile Include="loglumblendps.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="labelvs.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="labelps.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="lighting.hlsli">
