Checking in WIP topographics feature labelling. Added 'flagpoles' to labels to connect them to terrain.

--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -220,6 +220,12 @@
     <FxCompile Include="labelps.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="labelflagpoleps.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="labelflagpolevs.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="lighting.hlsli">
