Added a d2dhelper.h header and a helper function for setting up a D2D render target from a D3D11 render target texture. Updated existing code to use helper.

--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="src\label.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\d2dhelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\d3dhelper.cpp">
