--- a/OculusFramework/OculusFramework.vcxproj
+++ b/OculusFramework/OculusFramework.vcxproj
@@ -102,6 +102,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="auto_pch.h" />
+    <ClInclude Include="src\d2dhelper.h" />
     <ClInclude Include="src\d3dhelper.h" />
     <ClInclude Include="src\d3dresourcemanagers.h" />
     <ClInclude Include="src\d3dstatemanagers.h" />
