Added a debug option to display terrain wireframe.

--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -235,6 +235,9 @@
     <FxCompile Include="simple2dps.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="terrainwireframeps.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="lighting.hlsli">
