--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="src\d2dhelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\frp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\d3dhelper.cpp">
